# hsoundproto

./: CHANGELOG.md  LICENSE  Player.hs  README.md  hsoundproto.cabal
src/: Player.hs
